# job-tracker-bot

./: .pre-commit-config.yaml  .pre-commit.yaml  README.md  database.sqlite  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0d6d6756679c_create_vacancy_table.py  6795fa821737_init.py  70eba2966794_vacancy_to_job.py  7f5e67f1f5d3_job_model.py  8d5facbe7a81_create_vacancy_table.py  a70e95b30444_job_model_new_fields.py  ebcc29d23dc3_user_job.py
src/: button.py  config.py  database.py  exceptions.py  handler.py  keyboard.py  logging.py  message.py  model.py  state.py
src/api/jooble/: __init__.py  model.py
src/base/: button.py  enum.py  handler.py  keyboard.py  repository.py  service.py  state.py
src/job/: handler.py  keyboard.py  message.py  model.py  repository.py  schema.py  service.py  state.py
src/job/template/: job.html
src/user/: handler.py  model.py  repository.py  schema.py  service.py
src/user/template/: profile.html
src/user_job/: handler.py  keyboard.py  model.py  repository.py  schema.py  service.py
src/user_job/template/: user_job.html
src/vacancy/: handler.py  model.py  schema.py
test/test_jobs/: test_service.py
test/test_user/: test_handler.py  test_user.py
