[project]
name = "job-tracker-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "faker>=40.4.0",
    "lxml>=6.0.2",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
]
