[project]
name = "job-tracker-bot"
version = "1.0.0"
description = "Bot for tracking job applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "alembic>=1.18.4",
    "faker>=40.4.0",
    "jinja2>=3.1.6",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
]
